@startuml

package "Dominio" {
    class Product {
        - String id
        - String nombre
        - int cantidad
        - double precio
        + getId() : String
        + getNombre() : String
        + getCantidad() : int
        + getPrecio() : double
    }
}

package "DataBase" {
    class SQLiteHelper {
        + static getInstance(context: Context) : SQLiteHelper
        + productDao() : ProductDao
    }

    interface ProductDao {
        + addProduct(product: Product)
        + deleteProduct(product: Product)
        + getAllProducts() : List<Product>
    }
}

package "Actividad" {
    class MainActivity {
        - SQLiteHelper sqliteHelper
        - ProductDao productDao
        - FirebaseFirestore firebaseDB
        + addNewProduct()
        + loadProducts()
        + updateProductList(products: List<Product>)
        + deleteProduct(product: Product)
    }

    class SettingsActivity {
        + loadThemePreference()
        + setAppTheme(isDarkMode: boolean)
        + setAppLanguage(language: String)
        + restartMainActivity()
    }
}

package "Adaptador" {
    class ProductAdapter {
        - List<Product> productList
        + ProductAdapter(context: Context, products: List<Product>, listener: ProductActionListener)
        + getView(position: int, convertView: View, parent: ViewGroup) : View
    }
}

MainActivity --> "1" SQLiteHelper : uses
MainActivity --> "1" FirebaseFirestore : uses
MainActivity --> ProductDao : uses
MainActivity --> ProductAdapter : uses
ProductDao --> Product : manages
ProductAdapter --> Product : displays

@enduml
